fix: footer alignment

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ hr {
 .footer{
     background-color: 
     var(--primary-color);
-    padding: 2rem 1rem;
+    padding: 4rem 1rem;
     text-align: center;
     color: white;
     border-top-right-radius: 2rem;
@@ -153,7 +153,7 @@ hr {
 
 
 
-.list-link{
+.footer .link{
     text-decoration: none;
     color: white;
 }
@@ -161,14 +161,8 @@ hr {
 .footer .footer-header{
     font-weight: bold;
     font-size: large;
-    padding-bottom: 1rem;
   }
   
-  .footer .list-item-inline{
-    margin: 0.5rem;
-    padding: 0 2rem;
-    display: inline-block;
-  }
   
   .footer ul{
     padding-inline-start: 0px;
